fixing navigation on mobile

--- a/css/master.css
+++ b/css/master.css
@@ -36,20 +36,42 @@ h2{
   list-style: none;
   margin:0 auto;
   padding:0;
+  transition: all .5s;
 }
-.navigation, .footer{
+.mobile {
+  list-style: none;
+  position: absolute;
+  background-color: #302870ef;
+  margin: 0;
+  padding: 1em;
+  right: 0;
+  transition: all .5s;
+  border-bottom-left-radius: 6px;
+}
+.mobile li {
+  padding: .5em;
+}
+.active {
+  background-color: #302870;
+}
+.navigation, 
+.footer {
   background-color: #302870;
 }
 li{
   padding:1.5em;
 }
-nav a, footer a, footer p, footer h1{
+nav a, 
+footer a, 
+footer p, 
+footer h1 {
   color:#f5f5f6;
 }
-.footer section p{
+.footer section p {
   padding: 0;
 }
-nav a, .footer a{
+nav a,
+.footer a {
   text-decoration:none;
   /* transition: all 300ms; */
 }
@@ -69,12 +91,13 @@ nav a:hover, .footer a:hover{
   background:url("../images/undraw_programming_2svr.svg") no-repeat center;
   background-size: contain;
 }
-.code-container, header{
+.code-container,
+header {
   padding: 1em;
   background-color:#d8d8d8;
   margin:0 auto;
 }
-.hero{
+.hero {
   background-color: inherit;
 }
 /***CONTAINERS AND GRID***/
@@ -84,7 +107,7 @@ article,
   margin: 0 auto;
 }
 #grid-wrapper,
-footer{
+footer {
   display: grid;
   grid-gap: 20px;
   grid-template-columns: 1fr;
@@ -103,7 +126,7 @@ footer .code-container {
 .middle {
   text-align: center;
 }
-.box > img{
+.box > img {
   width:100%;
 }
 .glory {
@@ -116,7 +139,7 @@ footer .code-container {
   .glory {
   width: 60%;
   }
-  #grid-wrapper{
+  #grid-wrapper {
     grid-template-columns: repeat(2, 1fr);
   }
   nav a {
@@ -124,18 +147,18 @@ footer .code-container {
   }
 }
 @media only screen and (min-width:1400px){
-  .container{
+  .container {
     width:70%;
   }
   .glory {
   width: 70%;
   }
   #grid-wrapper,
-  footer{
+  footer {
     grid-template-columns: repeat(3, 1fr);
   }
 }
-.box{
+.box {
   background-color:#f0f0ff;
   padding:.8em;
 }
@@ -144,6 +167,6 @@ footer .code-container {
 transition: all .2s ease-in-out; 
 }
 .grow:hover { 
-transform: scale(1.2); 
+transform: scale(1.1); 
 background: none;
 }
